# photo-standards-db

./: TRAINING_PIPELINE.md  TRAINING_START.md  constants.json  docker-compose.dev.yml  docker-compose.yml  inspection-prototype.html  photo-standards-db.code-workspace  training-prototype.html  запуск.txt
backend/: .env  pyproject.toml  requirements.txt
backend/src/: config.py  database.py  exception.py  main.py
backend/src/_shared/: refiner_service.py  schemas.py
backend/src/cameras/: router.py  schemas.py  schemes.py
backend/src/groups/: models.py  router.py  schemes.py  service.py
backend/src/inspections/: models.py  routes.py  schemas.py
backend/src/mls/: models.py  router.py  routes.py  train_service.py
backend/src/models/: __init__.py  camera.py  group.py  inspection.py  ml_model.py  segment.py  segment_annotation.py  segment_group.py  standard.py  standard_image.py  user.py
backend/src/routes/: __init__.py  cameras.py  groups.py  inspections.py  models.py  segment_groups.py  segments.py  standard_images.py  standards.py  users.py
backend/src/schemes/: __init__.py  camera.py  group.py  inspection.py  ml_model.py  segment.py  segment_group.py  standard.py  standard_image.py  user.py
backend/src/segments/: models.py  router.py  schemas.py  service.py
backend/src/services/: __init__.py  file_service.py  group_service.py  refiner_service.py  standard_service.py  user_service.py
backend/src/standards/: models.py  schemas.py  service.py
backend/src/users/: router.py  schemas.py  service.py
client/: .gitignore  (+5 more)
server/: .env  Dockerfile  Dockerfile.dev  alembic.ini  flake.nix  pyproject.toml  pyrightconfig.json  requirements.txt
server/alembic/: env.py
server/src/: __init__.py  config.py  constants.py  exception.py  init_db.py  main.py
server/src/_shared/: constants.py  file_service.py  schemas.py
server/src/app/: config.py  db.py  dependencies.py  exception.py  exception_handlers.py  import_models.py  logging.py  router.py
server/src/cameras/: router.py
server/src/groups/: models.py  router.py  schemas.py  service.py
server/src/infra/ml/: refiner_service.py  yolo_inspector.py  yolo_trainer.py
server/src/infra/queue/: maintenance.py  procrastinate.py  reconciler.py  scheduler.py
server/src/infra/storage/: file_storage.py
server/src/inspections/: models.py  router.py  schemas.py  service.py
server/src/mls/: models.py  router.py  schemas.py  service.py  train_service.py  weights.py  worker.py
server/src/modules/cameras/: models.py  router.py  schemas.py
server/src/segments/: models.py  refiner_service.py  router.py  schemas.py  service.py
server/src/standards/: models.py  router.py  schemas.py  service.py
server/src/tasks/: app.py  db.py  training.py
server/src/users/: models.py  schemas.py  service.py
(+493 files in other folders)
