[project]
name = "backend"
version = "0.1.0"
requires-python = "==3.13.0"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-multipart",

  "sqlalchemy",
  "asyncpg",
  "pydantic-settings",
  "pydantic",

  "bcrypt",
  "numpy",

  "opencv-python-headless",
  "scikit-image", 
  "scipy",

  "onnxruntime",
  "ultralytics",
  "pillow"
]

[tool.uv]
override-dependencies = [
  "opencv-python; sys_platform == 'never'",
  "opencv-python-headless",
]


[project.scripts]
backend = "src.main:main"


