[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "server"
version = "0.1.0"
requires-python = "==3.13.0"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-multipart",
  "sqlalchemy",
  "asyncpg",
  "psycopg[binary]", 
  "pydantic-settings",
  "pydantic",
  "alembic",
  "bcrypt",
  "numpy",
  "opencv-python-headless",
  "scikit-image", 
  "scipy",
  "onnxruntime",
  "ultralytics",
  "pillow",
  "procrastinate"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
server = "src.main:main"
